add background option to storybook

--- a/stories/.storybook/manager-head.html
+++ b/stories/.storybook/manager-head.html
@@ -3,3 +3,7 @@
 		tab-size: 2 !important;
 	}
 </style>
+<link
+	rel="stylesheet"
+	href="https://unpkg.com/@schul-cloud/styles@0.2.0/build/css/default/variables.scss"
+/>
